--- a/artemis.v1.yaml
+++ b/artemis.v1.yaml
@@ -1,7 +1,7 @@
 swagger: '2.0'
 info:
   version: "1.0.0"
-  title: Project Hermes
+  title: Project Artemis
   description: collector + feature toggle
 host: interact.com
 basePath: /api
