--- a/artemis.v1.yaml
+++ b/artemis.v1.yaml
@@ -8,7 +8,7 @@ basePath: /api
 produces:
   - application/json
 paths:
-  /init:
+  /event/oninit:
     post:
       parameters:
         - name: initInformation
